@@ -122,13 +122,15 @@
 			<section class="grid contact--container-top">
 				<h2 class="visually-hidden">Contact us</h2>
 				<div class="bg--accent-light clr--black container contact--form">
-					<form action="#" class="grid checkout--shipping-form">
+					<form action="thank-you/" class="grid checkout--shipping-form">
 						<div>
 							<label for="name">Full name</label>
 							<input
 								type="text"
 								name="name"
 								id="name"
+								required="required"
+								minlength="2"
 								placeholder="Full name" />
 						</div>
 						<div>
@@ -137,6 +139,8 @@
 								type="email"
 								name="email-form"
 								id="email-form"
+								required="required"
+								pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
 								placeholder="name@example.com" />
 						</div>
 						<div>
@@ -145,7 +149,7 @@
 								type="text"
 								name="phone"
 								id="phone"
-								placeholder="+44 456 678 903" />
+								placeholder="+47 456 67 903" />
 						</div>
 						<div>
 							<label for="subject">Subject</label>
@@ -153,6 +157,7 @@
 								type="text"
 								name="subject"
 								id="subject"
+								minlength="2"
 								placeholder="Subject" />
 						</div>
 						<div>
@@ -160,6 +165,8 @@
 							<textarea
 								name="message"
 								id="message"
+								required="required"
+								minlength="10"
 								placeholder="Message"></textarea>
 							<div class="right">
 								<input type="submit" value="Send" />
@@ -247,11 +254,13 @@
 						</div>
 						<div class="cta--socials center">
 							<label for="email" class="visually-hidden">Email address</label>
-							<form action="#">
+							<form action="/contact/signed-up/">
 								<input
 									type="email"
 									name="email"
 									id="email"
+									required="required"
+									pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
 									placeholder="Enter your email address" />
 								<input type="submit" value="Sign up" />
 							</form>
