@@ -1,0 +1,245 @@
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<title>Thank you | Rainy Days</title>
+		<meta
+			name="description"
+			content="Rainy Days' contact page. Let's have chat over the campfire." />
+		<meta
+			name="keywords"
+			content="rain jackets, jackets, rain wear, clothing, contact" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<script
+			src="https://kit.fontawesome.com/8d12afa6e5.js"
+			crossorigin="anonymous"></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Anton&family=Fjalla+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100&family=Merriweather:wght@300&display=swap"
+			rel="stylesheet" />
+		<link rel="stylesheet" href="/css/styles.css" />
+		<!-- Hotjar Tracking Code for https://rainydaysixd-thr.netlify.app/ -->
+		<script>
+			(function (h, o, t, j, a, r) {
+				h.hj =
+					h.hj ||
+					function () {
+						(h.hj.q = h.hj.q || []).push(arguments);
+					};
+				h._hjSettings = { hjid: 3734889, hjsv: 6 };
+				a = o.getElementsByTagName("head")[0];
+				r = o.createElement("script");
+				r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+		</script>
+		<script src="/js/main.js" type="module"></script>
+	</head>
+	<body>
+		<!-- Start of header -->
+		<header>
+			<div class="container flex flex--space-between">
+				<a href="/"
+					><img src="/img/RainyDays_logo.svg" alt="Logo for Rainy Days"
+				/></a>
+				<!-- Start of desktop menu -->
+				<div class="flex">
+					<nav id="nav--desktop" class="flex">
+						<ul class="flex">
+							<li><a href="/">Home</a></li>
+							<li><a href="/products/?gender=female">Collection</a></li>
+							<li><a href="/about/">About</a></li>
+							<li><a href="/contact/" class="current">Contact</a></li>
+						</ul>
+					</nav>
+					<!-- Start of cart/checkout/hamburger -->
+					<div class="checkout-wrapper grid">
+						<div class="checkout--cart">
+							<a
+								href="/checkout/"
+								class="cart--icon"
+								aria-description="Items in your cart"></a>
+						</div>
+						<div class="checkout--sidecart">
+							<button id="sidecart--button" aria-expanded="false">
+								<i class="fas fa-bars fa-lg"></i>
+								<p class="visually-hidden">Menu</p>
+							</button>
+							<a href="/checkout/" class="sidecart--link">Check out</a>
+						</div>
+					</div>
+				</div>
+				<!-- Start of mobile menu -->
+				<div
+					id="nav--mobile"
+					class="flex flex--column mobile-nav"
+					data-visible="false">
+					<nav class="flex flex--column">
+						<ul class="flex flex--column">
+							<li><a href="/">Home</a></li>
+							<li><a href="/products/?gender=female">Collection</a></li>
+							<li><a href="/about/">About</a></li>
+							<li>
+								<a href="/contact/" class="current--mobile">Contact</a>
+							</li>
+						</ul>
+					</nav>
+					<div class="checkout-wrapper grid">
+						<div class="checkout--cart">
+							<a
+								id="mobile--cart--items"
+								href="checkout.html"
+								aria-description="Items in your cart"></a>
+						</div>
+						<div class="checkout--sidecart--mobile">
+							<a
+								id="mobile--cart--link"
+								href="checkout.html"
+								class="sidecart--link"
+								>Check out</a
+							>
+						</div>
+					</div>
+				</div>
+			</div>
+		</header>
+
+		<!-- Start of main -->
+		<main>
+			<section id="hero" class="hero">
+				<div id="hero--img-contact" class="hero--img hero--img-tall">
+					<div class="hero--content">
+						<h1>Thank you</h1>
+						<h2>We've recieved your message</h2>
+						<div class="hero--btn flex flex--left">
+							<a href="/">Back to home</a>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- Start of CTA -->
+			<section id="cta">
+				<div class="cta">
+					<h2>
+						Join the Rainy Days community and never miss an adventure or
+						promotion!
+					</h2>
+					<p>
+						Follow us on social media and sign up for our newsletter to stay
+						up-to-date on the latest products, promotions, and outdoor adventure
+						tips from Rainy Days! As a member of our community, you'll be the
+						first to know about new products, special promotions, and exclusive
+						behind-the-scenes content. Plus, you'll join a group of like-minded
+						outdoor enthusiasts who share your passion for exploration and
+						adventure. New signups to our newsletter will receive a promo code
+						for 20% off their first purchase.
+					</p>
+
+					<p>
+						Don't wait – click the links below and join the Rainy Days community
+						today!
+					</p>
+					<div class="flex flex--space-between flex--stack">
+						<div class="flex cta--socials center">
+							<a href="#">
+								<i
+									class="fa-brands fa-instagram fa-2xl"
+									aria-description="Link to Rainy Days' Instagram channel"></i>
+							</a>
+							<a href="#">
+								<i
+									class="fa-brands fa-facebook-f fa-2xl"
+									aria-description="Link to Rainy Days' Facebook page"></i>
+							</a>
+							<a href="#">
+								<i
+									class="fa-brands fa-twitter fa-2xl"
+									aria-description="Link to Rainy Days' Twitter profile"></i>
+							</a>
+						</div>
+						<div class="cta--socials center">
+							<label for="email" class="visually-hidden">Email address</label>
+							<form action="#">
+								<input
+									type="email"
+									name="email"
+									id="email"
+									required="required"
+									pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+									placeholder="Enter your email address" />
+								<input type="submit" value="Sign up" />
+							</form>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+
+		<!-- Start of footer -->
+		<footer>
+			<div class="container footer-grid grid">
+				<div id="footer-logo">
+					<img src="/img/RainyDays_logo.svg" alt="Logo for Rainy Days" />
+				</div>
+				<div id="footer-about">
+					<p>
+						With a focus on durability and versatility, our jackets are
+						engineered to withstand various weather conditions, ensuring you
+						remain comfortable during your adventures.
+					</p>
+				</div>
+				<nav id="footer-nav">
+					<h2>Browse</h2>
+					<ul>
+						<li><a href="/">Home</a></li>
+						<li><a href="/products/?gender=female">Collection</a></li>
+						<li><a href="/about/">About</a></li>
+						<li><a href="/contact/">Contact</a></li>
+					</ul>
+				</nav>
+				<nav id="footer-help">
+					<h2>Support</h2>
+					<ul>
+						<li><a href="#">Size guide</a></li>
+						<li><a href="#">Shipping</a></li>
+						<li><a href="#">Return policy</a></li>
+						<li><a href="#">Terms and conditions</a></li>
+					</ul>
+				</nav>
+				<div id="footer-contact">
+					<h2 id="footer-contact-h2">Contact</h2>
+					<ul>
+						<li id="footer-phone"><a href="tel:#">+44 456 678 903</a></li>
+						<li id="footer-email"><a href="mailto:#">hey@rainydays.com</a></li>
+						<li>
+							<div class="flex flex--left">
+								<a href="#">
+									<i
+										class="fa-brands fa-instagram fa-2xl"
+										aria-description="Link to Rainy Days' Instagram channel"></i>
+								</a>
+								<a href="#">
+									<i
+										class="fa-brands fa-facebook-f fa-2xl"
+										aria-description="Link to Rainy Days' Facebook page"></i>
+								</a>
+								<a href="#">
+									<i
+										class="fa-brands fa-twitter fa-2xl"
+										aria-description="Link to Rainy Days' Twitter profile"></i>
+								</a>
+							</div>
+						</li>
+					</ul>
+					<div class="flex"></div>
+				</div>
+			</div>
+			<p class="copyright">&copy; 2023 Rainy Days</p>
+		</footer>
+	</body>
+</html>
