@@ -158,12 +158,14 @@
 							experience – sign up for our newsletter now!
 						</p>
 						<div class="center">
-							<form action="#">
+							<form action="/contact/signed-up/">
 								<label for="email" class="visually-hidden">Email address</label>
 								<input
 									type="email"
 									name="email"
 									id="email"
+									required="required"
+									pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
 									placeholder="Enter your email address" />
 								<input type="submit" value="Sign up" />
 							</form>
